--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "ckeditor": "^4.11.4",
     "core-js": "^2.6.9",
+    "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "ng-treetable": "^1.3.3",
