--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crudoperations",
+  "name": "Oncamigo",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -12,37 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
-    "@angular/cdk": "^7.2.14",
-    "@angular/common": "^7.2.14",
-    "@angular/compiler": "^7.2.14",
-    "@angular/core": "^7.2.14",
-    "@angular/forms": "^7.2.14",
+    "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.0",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
     "@angular/http": "^7.2.14",
-    "@angular/platform-browser": "^7.2.14",
-    "@angular/platform-browser-dynamic": "^7.2.14",
-    "@angular/router": "^7.2.14",
+    "@angular/material": "^9.2.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ckeditor/ckeditor5-build-balloon": "^18.0.0",
     "bootstrap": "^4.3.1",
-    "ckeditor": "^4.11.4",
-    "core-js": "^2.6.9",
+    "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
+    "fsevents": "^2.1.2",
     "jquery": "^3.4.0",
-    "ng-treetable": "^1.3.3",
     "ng6-breadcrumbs": "^1.0.7",
     "ngx-bootstrap": "^4.1.1",
-    "ngx-ckeditor": "^0.4.0",
     "popper.js": "^1.15.0",
     "primeicons": "^1.0.0",
-    "primeng": "^7.1.3",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.9.0"
+    "rxjs": "^6.5.5",
+    "tslib": "^1.10.0",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.14",
-    "@angular/language-service": "^7.2.14",
+    "@angular-devkit/build-angular": "^0.900.7",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/language-service": "^9.1.0",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~11.13.8",
@@ -58,6 +59,6 @@
     "protractor": "^6.0.0",
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
-    "typescript": "3.1.6"
+    "typescript": "^3.8.3"
   }
 }
